deployed backend page

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,5 @@
 {% block body %}
 
 <h1>Oop! Did you get lost?</h1>
-<a href = "https://trevorhuang1.github.io/lmc-front2/lmc-login">Our project is here! idk why ur on this page :D</a>
+<a href = "https://trevorhuang1.github.io/lmc-front2/lmc-login">Our project is here! This page should not be accessed other than to prove deployment status. (N@TM 5/29 - deployed)</a>
 {% endblock %}
